--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -51,3 +51,23 @@ navAvatar {
   border-radius: 50%;
   cursor: pointer;
 }
+.options {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+}
+.set {
+  display: flex;
+}
+.name {
+  justify-content: center;
+  align-items: center;
+}
+.options:hover {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+}
+button {
+  cursor: pointer;
+}
