--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -62,7 +62,10 @@
   display: flex;
   justify-content: space-between;
 }
-
+.productInfoKey {
+  margin-right: 20px;
+  font-weight: 600;
+}
 .productInfoValue {
   font-weight: 300;
 }
