--- a/src/pages/newmovie/newmovie.css
+++ b/src/pages/newmovie/newmovie.css
@@ -4,6 +4,8 @@
 
 .addProductForm {
   margin-top: 10px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .addProductItem {
@@ -11,6 +13,7 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
+  padding: 20px;
 }
 
 .addProductItem > label {
@@ -36,4 +39,6 @@
   color: white;
   font-weight: 600;
   cursor: pointer;
+  height: 40px;
+  align-self: center;
 }
