--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,8 +1,12 @@
+.loginPage {
+  overflow-y: hidden;
+}
+
 .login {
   width: 100%;
   height: 100vh;
   display: flex;
-  align-items: center;
+  padding-top: 80px;
   justify-content: center;
 }
 
@@ -11,7 +15,14 @@
   flex-direction: column;
 }
 .loginInput {
+  width: 300px;
+  height: 30px;
   margin-bottom: 10px;
+}
+.loginInput:focus {
+  outline: none !important;
+  border: 2px solid blue;
+  box-shadow: 0 0 20px #719ece;
 }
 
 .loginButton {
@@ -22,6 +33,7 @@
   padding: 5px;
 }
 .title {
+  padding-top: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
